# WiiUDownloader

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.linux  Makefile  PKGBUILD  README.md  WiiUDownloader.c  WiiUDownloader.desktop  build.py  build_windows.sh  certificate.go  check_usage.sh  command.txt  compile_dist_windows.sh  content_validation.go  create_bundle.py  decryption.go  decryption_content.go  decryption_fst_extract.go  decryption_u8_extract.go  default.pgo  download_state.go  downloader.go  dummydb.go  dumpsteru.ui  functions.txt  go.mod  go.sum  grabTitles.py  gtitles.go  hash.go  keygen.go  logger.go  prepare_aria.sh  progress.c  run_windows.sh  ticket.go  tmd.go  (+4 more)
.github/: FUNDING.yml
.github/workflows/: linux.yml  macos.yml  msys2.yml  windows.yml
bundling/macOS/: Info.plist  WiiUDownloader.bundle  create_bundle.py
cdecrypt/: aes.c  aes.h  cdecrypt.c  cdecrypt.h  sha1.c  sha1.h  utf8.h  util.c  util.h
cmake/: FindMbedTLS.cmake  GResource.cmake
cmd/WiiUDownloader/: accessibility.go  config.go  configWindow.go  darkMode.go  generate_windows.go  go.mod  go.sum  initialSetupAssistant.go  main.go  mainwindow.go  progressWindow.go  queuePane.go  search.go  tile_view.go  ui_idle.go  utils.go  versioninfo.json  wrapper.go
data/: Info.plist  create_bundle.py  merge_universal_app.py  wiiudownloader.gresource.xml  wiiudownloader.ui
gtitles/: gtitles.h
include/: GameList.h  SettingsMenu.h  decryptor.h  downloader.h  fst.h  gtitles.h  keygen.h  libgodecrypt.h  log.h  registry.h  settings.h  ticket.h  titleInfo.h  tmd.h  updater.h  utils.h  version.h  window.h
include/cdecrypt/: cdecrypt.h
include/json/: json-forwards.h  json.h
include/miniz/: miniz.h
internal/formats/fst/: parser.go
internal/formats/tmd/: parser.go  spec.go
internal/formats/u8/: parser.go
internal/safebin/: cursor.go  parse_error.go
pkg/aria2go/: LICENSE  aria2_c.cc  aria2_c.h  go.mod  go.sum  libaria2.go  models.go  notifier.go
src/: GameList.cpp  SettingsMenu.cpp  decryptor.cpp  downloader.c  downloader.cpp  fst.c  jsoncpp.cpp  keygen.c  keygen.cpp  log.c  main.c  main.cpp  registry.cpp  settings.cpp  ticket.c  titleInfo.c  updater.cpp  utils.cpp
src/cdecrypt/: aes.c  aes.h  cdecrypt.c  sha1.c  sha1.h  utf8.h  util.c  util.h
src/miniz/: miniz.c
tests/: tests.cpp
